# fastapi-boilerplate

./: .pre-commit-config.yaml  README.md  pyproject.toml
core/: config.py
